syntax.output
Grammar

    0 $accept: program "EOF"

    1 program: global_declarations main_function "EOF"
    2        | /* empty */

    3 global_declarations: global_declarations global_declaration
    4                    | /* empty */

    5 global_declaration: typedef_declaration
    6                   | enum_declaration
    7                   | class_declaration
    8                   | union_declaration
    9                   | global_var_declaration
   10                   | func_declaration

   11 typedef_declaration: "typedef" typename listspec "id" dims ";"

   12 typename: standard_type
   13         | "id"

   14 standard_type: "char"
   15              | "int"
   16              | "float"
   17              | "string"
   18              | "void"

   19 listspec: "list"
   20         | /* empty */

   21 dims: dims dim
   22     | /* empty */

   23 dim: "[" "iconst" "]"
   24    | "[" "]"

   25 enum_declaration: "enum" "id" enum_body ";"

   26 enum_body: "{" id_list "}"

   27 id_list: id_list "," "id" initializer
   28        | "id" initializer

   29 initializer: "=" init_value
   30            | /* empty */

   31 init_value: expression
   32           | "{" init_values "}"

   33 expression: expression "||" expression
   34           | expression "&&" expression
   35           | expression "==" expression
   36           | expression ">" expression
   37           | expression "+" expression
   38           | expression "*" expression
   39           | "!" expression
   40           | "+" expression
   41           | "sizeop" expression
   42           | "++" variable
   43           | variable "++"
   44           | variable
   45           | variable "(" expression_list ")"
   46           | "length" "(" general_expression ")"
   47           | "new" "(" general_expression ")"
   48           | constant
   49           | "(" general_expression ")"
   50           | "(" standard_type ")"
   51           | listexpression

   52 variable: variable "[" general_expression "]"
   53         | variable "." "id"
   54         | "listfunc" "(" general_expression ")"
   55         | decltype "id"
   56         | "this"

   57 general_expression: general_expression "," general_expression
   58                   | assignment

   59 assignment: variable "=" assignment
   60           | expression

   61 expression_list: general_expression
   62                | /* empty */

   63 constant: "cconst"
   64         | "iconst"
   65         | "fconst"
   66         | "sconst"

   67 listexpression: "[" expression_list "]"

   68 init_values: init_values "," init_value
   69            | init_value

   70 class_declaration: "class" "id" class_body ";"

   71 class_body: parent "{" members_methods "}"

   72 parent: ":" "id"
   73       | /* empty */

   74 members_methods: members_methods access member_or_method
   75                | access member_or_method

   76 access: "private" ":"
   77       | "protected" ":"
   78       | "public" ":"
   79       | /* empty */

   80 member_or_method: member
   81                 | method

   82 member: var_declaration
   83       | anonymous_union

   84 var_declaration: typename variabledefs ";"
   85                | typename variabledefs error

   86 variabledefs: variabledefs "," variabledef
   87             | variabledef

   88 variabledef: listspec "id" dims

   89 anonymous_union: "union" union_body ";"

   90 union_body: "{" fields "}"

   91 fields: fields field
   92       | field

   93 field: var_declaration

   94 method: short_func_declaration

   95 short_func_declaration: short_par_func_header ";"
   96                       | nopar_func_header ";"

   97 short_par_func_header: func_header_start "(" parameter_types ")"

   98 func_header_start: typename listspec "id"

   99 parameter_types: parameter_types "," typename pass_list_dims
  100                | typename pass_list_dims

  101 pass_list_dims: "refer"
  102               | listspec dims

  103 nopar_func_header: func_header_start "(" ")"

  104 union_declaration: "union" "id" union_body ";"

  105 global_var_declaration: typename init_variabledefs ";"

  106 init_variabledefs: init_variabledefs "," init_variabledef
  107                  | init_variabledef

  108 init_variabledef: variabledef initializer

  109 func_declaration: short_func_declaration
  110                 | full_func_declaration

  111 full_func_declaration: full_par_func_header "{" decl_statements "}"
  112                      | nopar_class_func_header "{" decl_statements "}"
  113                      | nopar_func_header "{" decl_statements "}"

  114 full_par_func_header: class_func_header_start "(" parameter_list ")"
  115                     | func_header_start "(" parameter_list ")"

  116 class_func_header_start: typename listspec func_class "id"

  117 func_class: "id" "meth"

  118 parameter_list: parameter_list "," typename pass_variabledef
  119               | typename pass_variabledef

  120 pass_variabledef: variabledef
  121                 | "refer" "id"

  122 nopar_class_func_header: class_func_header_start "(" ")"

  123 decl_statements: declarations statements
  124                | declarations
  125                | statements
  126                | /* empty */

  127 declarations: declarations decltype typename variabledefs ";"
  128             | decltype typename variabledefs ";"

  129 decltype: "static"
  130         | /* empty */

  131 statements: statements statement
  132           | statement

  133 statement: expression_statement
  134          | if_statement
  135          | while_statement
  136          | for_statement
  137          | switch_statement
  138          | return_statement
  139          | io_statement
  140          | comp_statement
  141          | "continue" ";"
  142          | "break" ";"
  143          | ";"

  144 expression_statement: general_expression ";"
  145                     | error ";"

  146 if_statement: "if" "(" general_expression ")" statement if_tail

  147 if_tail: "else" statement
  148        | /* empty */

  149 while_statement: "while" "(" general_expression ")" statement

  150 for_statement: "for" "(" optexpr ";" optexpr ";" optexpr ")" statement

  151 optexpr: general_expression
  152        | /* empty */

  153 switch_statement: "switch" "(" general_expression ")" switch_tail

  154 switch_tail: "{" decl_cases "}"
  155            | single_casestatement

  156 decl_cases: declarations casestatements
  157           | declarations
  158           | casestatements
  159           | /* empty */

  160 casestatements: casestatements casestatement
  161               | casestatement

  162 casestatement: "case" constant ":" casestatement
  163              | "case" constant ":" statements
  164              | "default" ":" statements

  165 single_casestatement: "case" constant ":" single_casestatement
  166                     | "case" constant ":" statement

  167 return_statement: "return" optexpr ";"

  168 io_statement: "cin" "<<" in_list ";"
  169             | "cout" ">>" out_list ";"

  170 in_list: in_list "<<" in_item
  171        | in_item

  172 in_item: variable

  173 out_list: out_list ">>" out_item
  174         | out_item

  175 out_item: general_expression

  176 comp_statement: "{" decl_statements "}"

  177 main_function: main_header "{" decl_statements "}"

  178 main_header: "int" "main" "(" ")"


Terminals, with rules where they appear

"EOF" (0) 0 1
error (256) 85 145
"typedef" (258) 11
"char" (259) 14
"int" (260) 15 178
"float" (261) 16
"string" (262) 17
"class" (263) 70
"private" (264) 76
"protected" (265) 77
"public" (266) 78
"void" (267) 18
"static" (268) 129
"union" (269) 89 104
"enum" (270) 25
"list" (271) 19
"continue" (272) 141
"break" (273) 142
"if" (274) 146
"else" (275) 147
"while" (276) 149
"for" (277) 150
"switch" (278) 153
"case" (279) 162 163 165 166
"default" (280) 164
"return" (281) 167
"length" (282) 46
"new" (283) 47
"cin" (284) 168
"cout" (285) 169
"main" (286) 178
"this" (287) 56
"id" (288) 11 13 25 27 28 53 55 70 72 88 98 104 116 117 121
"iconst" (289) 23 64
"fconst" (290) 65
"cconst" (291) 63
"sconst" (292) 66
"||" (293) 33
"&&" (294) 34
"==" (295) 35
">" (296) 36
"+" (297) 37 40
"*" (298) 38
"!" (299) 39
"++" (300) 42 43
"sizeop" (301) 41
"listfunc" (302) 54
"(" (303) 45 46 47 49 50 54 97 103 114 115 122 146 149 150 153 178
")" (304) 45 46 47 49 50 54 97 103 114 115 122 146 149 150 153 178
";" (305) 11 25 70 84 89 95 96 104 105 127 128 141 142 143 144 145
    150 167 168 169
"." (306) 53
"," (307) 27 57 68 86 99 106 118
"=" (308) 29 59
":" (309) 72 76 77 78 162 163 164 165 166
"[" (310) 23 24 52 67
"]" (311) 23 24 52 67
"refer" (312) 101 121
"{" (313) 26 32 71 90 111 112 113 154 176 177
"}" (314) 26 32 71 90 111 112 113 154 176 177
"meth" (315) 117
"<<" (316) 168 170
">>" (317) 169 173
LOWER_THAN_ELSE (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1 2, on right: 0
global_declarations (66)
    on left: 3 4, on right: 1 3
global_declaration (67)
    on left: 5 6 7 8 9 10, on right: 3
typedef_declaration (68)
    on left: 11, on right: 5
typename (69)
    on left: 12 13, on right: 11 84 85 98 99 100 105 116 118 119 127
    128
standard_type (70)
    on left: 14 15 16 17 18, on right: 12 50
listspec (71)
    on left: 19 20, on right: 11 88 98 102 116
dims (72)
    on left: 21 22, on right: 11 21 88 102
dim (73)
    on left: 23 24, on right: 21
enum_declaration (74)
    on left: 25, on right: 6
enum_body (75)
    on left: 26, on right: 25
id_list (76)
    on left: 27 28, on right: 26 27
initializer (77)
    on left: 29 30, on right: 27 28 108
init_value (78)
    on left: 31 32, on right: 29 68 69
expression (79)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51, on right: 31 33 34 35 36 37 38 39 40 41 60
variable (80)
    on left: 52 53 54 55 56, on right: 42 43 44 45 52 53 59 172
general_expression (81)
    on left: 57 58, on right: 46 47 49 52 54 57 61 144 146 149 151
    153 175
assignment (82)
    on left: 59 60, on right: 58 59
expression_list (83)
    on left: 61 62, on right: 45 67
constant (84)
    on left: 63 64 65 66, on right: 48 162 163 165 166
listexpression (85)
    on left: 67, on right: 51
init_values (86)
    on left: 68 69, on right: 32 68
class_declaration (87)
    on left: 70, on right: 7
class_body (88)
    on left: 71, on right: 70
parent (89)
    on left: 72 73, on right: 71
members_methods (90)
    on left: 74 75, on right: 71 74
access (91)
    on left: 76 77 78 79, on right: 74 75
member_or_method (92)
    on left: 80 81, on right: 74 75
member (93)
    on left: 82 83, on right: 80
var_declaration (94)
    on left: 84 85, on right: 82 93
variabledefs (95)
    on left: 86 87, on right: 84 85 86 127 128
variabledef (96)
    on left: 88, on right: 86 87 108 120
anonymous_union (97)
    on left: 89, on right: 83
union_body (98)
    on left: 90, on right: 89 104
fields (99)
    on left: 91 92, on right: 90 91
field (100)
    on left: 93, on right: 91 92
method (101)
    on left: 94, on right: 81
short_func_declaration (102)
    on left: 95 96, on right: 94 109
short_par_func_header (103)
    on left: 97, on right: 95
func_header_start (104)
    on left: 98, on right: 97 103 115
parameter_types (105)
    on left: 99 100, on right: 97 99
pass_list_dims (106)
    on left: 101 102, on right: 99 100
nopar_func_header (107)
    on left: 103, on right: 96 113
union_declaration (108)
    on left: 104, on right: 8
global_var_declaration (109)
    on left: 105, on right: 9
init_variabledefs (110)
    on left: 106 107, on right: 105 106
init_variabledef (111)
    on left: 108, on right: 106 107
func_declaration (112)
    on left: 109 110, on right: 10
full_func_declaration (113)
    on left: 111 112 113, on right: 110
full_par_func_header (114)
    on left: 114 115, on right: 111
class_func_header_start (115)
    on left: 116, on right: 114 122
func_class (116)
    on left: 117, on right: 116
parameter_list (117)
    on left: 118 119, on right: 114 115 118
pass_variabledef (118)
    on left: 120 121, on right: 118 119
nopar_class_func_header (119)
    on left: 122, on right: 112
decl_statements (120)
    on left: 123 124 125 126, on right: 111 112 113 176 177
declarations (121)
    on left: 127 128, on right: 123 124 127 156 157
decltype (122)
    on left: 129 130, on right: 55 127 128
statements (123)
    on left: 131 132, on right: 123 125 131 163 164
statement (124)
    on left: 133 134 135 136 137 138 139 140 141 142 143, on right:
    131 132 146 147 149 150 166
expression_statement (125)
    on left: 144 145, on right: 133
if_statement (126)
    on left: 146, on right: 134
if_tail (127)
    on left: 147 148, on right: 146
while_statement (128)
    on left: 149, on right: 135
for_statement (129)
    on left: 150, on right: 136
optexpr (130)
    on left: 151 152, on right: 150 167
switch_statement (131)
    on left: 153, on right: 137
switch_tail (132)
    on left: 154 155, on right: 153
decl_cases (133)
    on left: 156 157 158 159, on right: 154
casestatements (134)
    on left: 160 161, on right: 156 158 160
casestatement (135)
    on left: 162 163 164, on right: 160 161 162
single_casestatement (136)
    on left: 165 166, on right: 155 165
return_statement (137)
    on left: 167, on right: 138
io_statement (138)
    on left: 168 169, on right: 139
in_list (139)
    on left: 170 171, on right: 168 170
in_item (140)
    on left: 172, on right: 170 171
out_list (141)
    on left: 173 174, on right: 169 173
out_item (142)
    on left: 175, on right: 173 174
comp_statement (143)
    on left: 176, on right: 140
main_function (144)
    on left: 177, on right: 1
main_header (145)
    on left: 178, on right: 177


state 0

    0 $accept: . program "EOF"

    "EOF"     reduce using rule 2 (program)
    $default  reduce using rule 4 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


state 1

    0 $accept: program . "EOF"

    "EOF"  shift, and go to state 3


state 2

    1 program: global_declarations . main_function "EOF"
    3 global_declarations: global_declarations . global_declaration

    "typedef"  shift, and go to state 4
    "char"     shift, and go to state 5
    "int"      shift, and go to state 6
    "float"    shift, and go to state 7
    "string"   shift, and go to state 8
    "class"    shift, and go to state 9
    "void"     shift, and go to state 10
    "union"    shift, and go to state 11
    "enum"     shift, and go to state 12
    "id"       shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    enum_declaration         go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


state 3

    0 $accept: program "EOF" .

    $default  accept


state 4

   11 typedef_declaration: "typedef" . typename listspec "id" dims ";"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


state 5

   14 standard_type: "char" .

    $default  reduce using rule 14 (standard_type)


state 6

   15 standard_type: "int" .
  178 main_header: "int" . "main" "(" ")"

    "main"  shift, and go to state 35

    $default  reduce using rule 15 (standard_type)


state 7

   16 standard_type: "float" .

    $default  reduce using rule 16 (standard_type)


state 8

   17 standard_type: "string" .

    $default  reduce using rule 17 (standard_type)


state 9

   70 class_declaration: "class" . "id" class_body ";"

    "id"  shift, and go to state 36


state 10

   18 standard_type: "void" .

    $default  reduce using rule 18 (standard_type)


state 11

  104 union_declaration: "union" . "id" union_body ";"

    "id"  shift, and go to state 37


state 12

   25 enum_declaration: "enum" . "id" enum_body ";"

    "id"  shift, and go to state 38


state 13

   13 typename: "id" .

    $default  reduce using rule 13 (typename)


state 14

    3 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 3 (global_declarations)


state 15

    5 global_declaration: typedef_declaration .

    $default  reduce using rule 5 (global_declaration)


state 16

   98 func_header_start: typename . listspec "id"
  105 global_var_declaration: typename . init_variabledefs ";"
  116 class_func_header_start: typename . listspec func_class "id"

    "list"  shift, and go to state 39

    $default  reduce using rule 20 (listspec)

    listspec           go to state 40
    variabledef        go to state 41
    init_variabledefs  go to state 42
    init_variabledef   go to state 43


state 17

   12 typename: standard_type .

    $default  reduce using rule 12 (typename)


state 18

    6 global_declaration: enum_declaration .

    $default  reduce using rule 6 (global_declaration)


state 19

    7 global_declaration: class_declaration .

    $default  reduce using rule 7 (global_declaration)


state 20

  109 func_declaration: short_func_declaration .

    $default  reduce using rule 109 (func_declaration)


state 21

   95 short_func_declaration: short_par_func_header . ";"

    ";"  shift, and go to state 44


state 22

   97 short_par_func_header: func_header_start . "(" parameter_types ")"
  103 nopar_func_header: func_header_start . "(" ")"
  115 full_par_func_header: func_header_start . "(" parameter_list ")"

    "("  shift, and go to state 45


state 23

   96 short_func_declaration: nopar_func_header . ";"
  113 full_func_declaration: nopar_func_header . "{" decl_statements "}"

    ";"  shift, and go to state 46
    "{"  shift, and go to state 47


state 24

    8 global_declaration: union_declaration .

    $default  reduce using rule 8 (global_declaration)


state 25

    9 global_declaration: global_var_declaration .

    $default  reduce using rule 9 (global_declaration)


state 26

   10 global_declaration: func_declaration .

    $default  reduce using rule 10 (global_declaration)


state 27

  110 func_declaration: full_func_declaration .

    $default  reduce using rule 110 (func_declaration)


state 28

  111 full_func_declaration: full_par_func_header . "{" decl_statements "}"

    "{"  shift, and go to state 48


state 29

  114 full_par_func_header: class_func_header_start . "(" parameter_list ")"
  122 nopar_class_func_header: class_func_header_start . "(" ")"

    "("  shift, and go to state 49


state 30

  112 full_func_declaration: nopar_class_func_header . "{" decl_statements "}"

    "{"  shift, and go to state 50


state 31

    1 program: global_declarations main_function . "EOF"

    "EOF"  shift, and go to state 51


state 32

  177 main_function: main_header . "{" decl_statements "}"

    "{"  shift, and go to state 52


state 33

   15 standard_type: "int" .

    $default  reduce using rule 15 (standard_type)


state 34

   11 typedef_declaration: "typedef" typename . listspec "id" dims ";"

    "list"  shift, and go to state 39

    $default  reduce using rule 20 (listspec)

    listspec  go to state 53


state 35

  178 main_header: "int" "main" . "(" ")"

    "("  shift, and go to state 54


state 36

   70 class_declaration: "class" "id" . class_body ";"

    ":"  shift, and go to state 55

    $default  reduce using rule 73 (parent)

    class_body  go to state 56
    parent      go to state 57


state 37

  104 union_declaration: "union" "id" . union_body ";"

    "{"  shift, and go to state 58

    union_body  go to state 59


state 38

   25 enum_declaration: "enum" "id" . enum_body ";"

    "{"  shift, and go to state 60

    enum_body  go to state 61


state 39

   19 listspec: "list" .

    $default  reduce using rule 19 (listspec)


state 40

   88 variabledef: listspec . "id" dims
   98 func_header_start: typename listspec . "id"
  116 class_func_header_start: typename listspec . func_class "id"

    "id"  shift, and go to state 62

    func_class  go to state 63


state 41

  108 init_variabledef: variabledef . initializer

    "="  shift, and go to state 64

    $default  reduce using rule 30 (initializer)

    initializer  go to state 65


state 42

  105 global_var_declaration: typename init_variabledefs . ";"
  106 init_variabledefs: init_variabledefs . "," init_variabledef

    ";"  shift, and go to state 66
    ","  shift, and go to state 67


state 43

  107 init_variabledefs: init_variabledef .

    $default  reduce using rule 107 (init_variabledefs)


state 44

   95 short_func_declaration: short_par_func_header ";" .

    $default  reduce using rule 95 (short_func_declaration)


state 45

   97 short_par_func_header: func_header_start "(" . parameter_types ")"
  103 nopar_func_header: func_header_start "(" . ")"
  115 full_par_func_header: func_header_start "(" . parameter_list ")"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13
    ")"       shift, and go to state 68

    typename         go to state 69
    standard_type    go to state 17
    parameter_types  go to state 70
    parameter_list   go to state 71


state 46

   96 short_func_declaration: nopar_func_header ";" .

    $default  reduce using rule 96 (short_func_declaration)


state 47

  113 full_func_declaration: nopar_func_header "{" . decl_statements "}"
